Update azure-pipeline.yml for Azure Pipelines

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -20,7 +20,8 @@ steps:
   displayName: 'Install Node Dependencies'
 
 - script: |
-    npm run cy:run
+- script: |
+    npm test
   displayName: 'Run Cypress Tests'
 
 - task: PublishTestResults@2
