--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
      "scripts": {
     "open": "npx cypress open",
     "test": "npx cypress run"
+    "cy:run": "npx cypress run"
   },
     "cypress-cucumber-preprocessor": {
         "nonGlobalStepDefinitions": true
