--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
      "scripts": {
     "open": "npx cypress open",
-    "test": "npx cypress run"
+    "test": "npx cypress run",
     "cy:run": "npx cypress run"
   },
     "cypress-cucumber-preprocessor": {
